maked more changeble about dhashboard

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -40,7 +40,7 @@
     <LinearLayout
         android:id="@+id/Li1"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/solid_quiz"
         android:visibility="gone"
         android:orientation="vertical">
@@ -56,7 +56,8 @@
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginRight="5dp"
+            android:paddingBottom="30dp"/>
 
     </LinearLayout>
 
@@ -101,7 +102,7 @@
         android:layout_height="wrap_content"
         android:text="Quiz Is Not Ready!"
         android:layout_marginLeft="75dp"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="50dp"
         android:gravity="center"
         android:textColor="@color/colorText"
         android:textSize="30dp"
@@ -114,14 +115,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:padding="26sp">
+        android:layout_marginTop="15sp"
+        android:layout_marginStart="26sp"
+        android:layout_marginEnd="26sp">
 
 
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/radio_group"
-            android:layout_centerVertical="true">
+            >
 
 
 
