--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -21,7 +21,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="wrap_content"
             android:background="@color/colorPrimary">
 
             <ImageView
@@ -67,7 +67,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="110dp"
             android:background="@drawable/bg_wave"/>
     </LinearLayout>
 
@@ -84,10 +84,12 @@
 
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:visibility="gone"
             android:src="@drawable/icon"
-            android:layout_marginLeft="100dp"
+
+
             />
 
 
@@ -95,9 +97,8 @@
                 android:id="@+id/RecycleView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
                 android:background="@drawable/card_view"
-                android:scrollbars="vertical" />
+                android:scrollbars="none" />
 
             <LinearLayout
                 android:layout_width="match_parent"
