--- a/app/src/main/res/layout/single_view.xml
+++ b/app/src/main/res/layout/single_view.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="185dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="180dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
-        app:cardCornerRadius="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:cardCornerRadius="10dp"
         app:cardMaxElevation="1000dp">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+9
 
         <ImageView
             android:id="@+id/imageview"
-            android:layout_width="70dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
             android:layout_marginTop="15dp"
-            android:layout_marginLeft="10dp"
-           android:layout_marginStart="50dp"/>
+
+            android:src="@drawable/exam"
+            android:layout_marginEnd="10dp"
+           android:layout_marginStart="10dp"
+            android:padding="20dp"/>
 
         <TextView
             android:id="@+id/textview"
@@ -30,9 +40,11 @@
             android:textSize="23dp"
             android:textAllCaps="false"
             android:textColor="@color/colorText"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_gravity="center_horizontal"/>
-        
+
+</LinearLayout>
         
     </androidx.cardview.widget.CardView>
 
